--- a/app/responsive.css
+++ b/app/responsive.css
@@ -48,6 +48,9 @@
 }
 
 @media(width < 800px){
+    .page{
+        padding: 25px 20px;
+    }
    
     .hero-img-wrapper{
         display: none;
@@ -67,6 +70,9 @@
  
 }
 @media(width < 500px){
+    .page{
+        padding: 20px 15px;
+    }
     .hero-section-left{
         width: 100%;
     }
@@ -89,11 +95,12 @@
     }
 
     .profiles-wrapper{
-        gap: 5px;
+        gap: 20px;
+        justify-content: center;
     }
 
     .profile-card{
-        width: 140px;
+        width: 160px;
         padding: 10px 5px;
         border-radius: 5px;
     }
@@ -117,9 +124,7 @@
     .profile-img{
         width: 70%;
     }
-    .profile-card-details button{
-        display: none;
-    }
+
 
     .how-it-works-card {
         width: 100%;
@@ -133,6 +138,13 @@
     }
     .page{
         padding: 20px 15px;
+    }
+}
+@media(width < 380px){
+    .profile-card{
+        width: 150px;
+        padding: 10px 5px;
+        border-radius: 5px;
     }
 }
 
@@ -151,6 +163,38 @@
     .top-rated-card-wrapper{
         justify-content: center;
     }
+    .profiles-wrapper{
+        gap: 10px;
+    }
+
+    .profile-card{
+        width: 140px;
+        padding: 10px 5px;
+        border-radius: 5px;
+    }
+    .profile-card-details button{
+        display: none;
+    }
+
 }
 
-
+@media(width < 320px){
+    .profile-card{
+        width: 80%;
+        padding: 15px 15px;
+        border-radius: 5px;
+        border-radius: 18px;
+    }
+    .profile-img{
+        width: 50%;
+    }
+    .profile-card-details button{
+        display: block;
+    }
+    .profile-name {
+        font-size: 18px;
+    }
+    .profile-card-btn {
+        padding: 15px 15px !important;
+    }
+}
